# anchor-llm-in-truth

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMO.md  PROMOTION.md  README.md  README_EN.md  ROADMAP.md  SECURITY.md  SOCIAL_POSTS.md  agi_implementation_analysis.md  alert_manager.py  alignment_middleware.py  api_server.py  async_bus.py  auto_kb_updater.py  awareness  awareness_gateway.py  awareness_metrics.py  backpressure.py  batch_check.py  benchmark.py  benchmark_report.json  bias_detector.py  billing.py  build_apk.sh  build_binaries.py  cache_stats.py  chaos_engineering.py  checker_classes.py  circuit_breaker.py  cloudflare_waf.py  compiled_awareness.py  config.json  consensus_engine.py  (+74 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  ci.yml  docker-build.yml  docs.yml  test.yml  unity-cloud-build.yml
baseline/: baseline_final.txt  commit_hash.txt  metrics.json
benchmark/: README.md  all_backup.jsonl  baseline_final.txt  baseline_meta.json  baseline_post_kb_fix.txt  error_analysis.jsonl  error_bucket.py  error_summary.json  error_taxonomy.json  gen_golden.py  golden_v1.jsonl  graph_relation.jsonl  knowledge_base.jsonl  location_conflict.jsonl  negation.jsonl  numeric_conflict.jsonl  run.py  sample_1k.jsonl  security_audit.json  temporal_order.jsonl  year_conflict.jsonl
ci/: benchmark_gate.py  entities_sample.json  error_dashboard.py  kb_generator.py  metrics_reporter.py
demos/: compiled_awareness.py
docs/: index.html  index.md
k8s/: deployment.yaml
linghui/: index.html
(+9 files in other folders)
