[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awareness-gateway"
version = "2.2.0"
description = "Hallucination detection gateway — real-time fact-checking proxy for LLMs"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Li Gang", email = "hubeiligang420@gmail.com"}
]
keywords = ["llm", "hallucination", "fact-checking", "langchain", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
ocr = ["pytesseract"]
langchain = ["langchain-core"]

[project.scripts]
awareness-gateway = "awareness_gateway:main"
awareness-dashboard = "feedback_dashboard:main"
awareness-detect = "ocr_handler:main"
awareness-kb = "update_kb:main"

[project.urls]
Homepage = "https://github.com/malaxiya20250530-glitch/shiyan2925"
Repository = "https://github.com/malaxiya20250530-glitch/shiyan2925"

[tool.setuptools]
py-modules = [
    "hallucination_detector",
    "awareness_gateway",
    "observer_proxy",
    "observer_security",
    "alignment_middleware",
    "feedback_store",
    "feedback_dashboard",
    "update_kb",
    "logger",
    "true_self_os",
    "social_self_sim",
    "vector_kb",
    "web_verifier",
    "ocr_handler",
    "langchain_plugin",
    "encrypt_source",
    "stress_test",
]
